--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<section id="header">
-				<div class="inner">
-					<img src="images/avatar.jpg" alt="Profile picture" width="150" height="150" /></span>
-					<h1>Hi, I'm <strong>Jaclyn</strong> and I'm currently<br />
-					a student at Staffordshire university studying Games Development</a>.</h1>
-					<p>These are the current projects I am most proud of and a brief overview of what skills I learnt whilst working on them<br /></p>
+		<section id="header" class="header">
+			<div class="container">
+				<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
+						<header class="major">
+							<h1>Hi I'm<strong> Jaclyn</strong></h1>
+							<h3>I'm currently studying Computer Games Development at Staffordshire University</h3>
+						</header>
+						<p>These are the projects I am currently most proud of
+						</p>
+
+					</div>
+					<div class="col-6 col-12-medium imp-medium">
+						<span class="image"><img width="400" height="310" src="images/avatar.jpg" alt="" /></span>
+					</div>
 				</div>
-			</section>
+			</div>
+		</section>
 
 		<!-- One -->
 			<section id="one" class="main style1">
@@ -123,8 +133,85 @@
 		</section>
 
 		<!-- Four -->
+		<section id="two" class="main style2">
+			<div class="container">
+				<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
+						<header class="major">
+							<h2>Pizzeria Armagedon</h2>
+							<h3>C# Unity prototype top down shooter</h3>
+						</header>
+						<p>Premise: You play as a chef in a pizzeria that is being attacked by zombie pizza dough. You must shoot the pizza dough with the correct pizza toppings before cooking it into a pizza to earn points and survive as long as possible.
+
+						</p>
+
+						<p>I created a pizza themed tile set and have sliced it with a 72 by 72 grid. I have turned it into a drawable tile palette and created a restaurant.
+							 <br>
+							It was a challenge to make the projectiles fire in the direction the player was facing. First I had to work out how the Vector 2 for player direction works. I created a debug to print out the coordinates of the player direction and converted it into a simpler int which is number 1-4 depending on direction. I then have the bullet communicate with the character controller and set another vector 2 to Vector2.right or Vector2.left etc to get the bullet to be in the same direction as the player. I then use transform.translate and this Vector2 with the stored direction to fire it in the same direction as the player. To fire the bullet I have both the new and the old input systems in the project and use the "jump" key to use space as fire. On pressing space the bullet is instantiated from a prefab with the direction set up on start.
+							 <br>
+							The gun is a child of the character and uses a script to change the sprite to face the correct direction using the int of numbers 1-4. There are also 4 firepoints which are at the end of the gun and depending on the direction a different fire point is used to make the bullet come from the end of the gun.
+							 <br>
+							I have implemented UI to swap between the different projectiles - This uses 3 buttons which when clicked, change a int to a number between 1 and 3 which in the shooting script changes which projectile is fired.
+							 <br>
+							The enemies can collide with bullets which causes a child object to display a graphic for the sauce and cheese. Once hit by the flame, the movement script is deleted and the child objects display no graphics and the enemy turns into a pizza - the player can interact with this object to score points
+							 <br>
+							The enemies have a spawning system which if there are no enemies on screen, at least one enemy must be spawned. Then there is a timer and enemies spawn every so often but only a certain amount can spawn at a time - the more points you score, the more can spawn at a time. </p>
+
+						
+
+					</div>
+					<div class="col-6 col-12-medium imp-medium">
+						<span class="image fit"><img src="images/Pizza.PNG" alt="" /></span>
+						<div class="col-6 col-12-medium imp-medium">
+					<span class="image fit"><video width="320" height="240" controls>
+						<source src="images/Pizza.mp4" type="video/mp4"></span>
+				</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- Five -->
+		<section id="one" class="main style1">
+			<div class="container">
+				<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
+						<header class="major">
+							<h2>Super Seal Bros</h2>
+							<h3>Game Engine created from S2D/SDL in C++
+							</h3>
+						</header>
+						<p>Upcoming
+						</p>
+					</div>
+					<!-- <div class="col-6 col-12-medium imp-medium">
+						<span class="image fit"><img src="images/sidescroller.png" alt="" /></span>
+					</div>
+					<div class="image fit"><video width="320" height="240" controls>
+						<source src="images/sidescroller1.mp4" type="video/mp4"></div>	 -->
+				</div>
+			</div>
+		</section>
+				<!-- Six -->
+				<section id="two" class="main style2">
+					<div class="container">
+						<div class="row gtr-150">
+							<div class="col-6 col-12-medium">
+								<header class="major">
+									<h2>Marshall Eats Muffin Simulator</h2>
+									<h3>OpenGL 3D Game Engine in C++</h3>
+								</header>
+								<p>Upcoming
+								</p>
+							</div>
+							<!-- <div class="col-6 col-12-medium imp-medium">
+								<span class="image fit"><img src="images/Pizza.PNG" alt="" /></span>
+								<div class="col-6 col-12-medium imp-medium">
+							<span class="image fit"><video width="320" height="240" controls>
+								<source src="images/Pizza.mp4" type="video/mp4"></span> -->
+						</div>
+						</div>
+					</div>
+				</section>
 		<!--
 			<section id="five" class="main style1">
 				<div class="container">
