--- a/index.html
+++ b/index.html
@@ -200,14 +200,19 @@
 									<h2>Marshall Eats Muffin Simulator</h2>
 									<h3>OpenGL 3D Game Engine in C++</h3>
 								</header>
-								<p>Upcoming
+								<p>This was created using the OpenGL libraries in visual studio and written in C++
+									<br>
+									WASD to move character and camera forward, backwards, left and right (figure 2)
+									QE to move the character and camera up and down.
+									The game is called Marshall eats muffins simulator as the playable character is a seal named Marshall who must eat muffins to score points. Colliding with muffins adds ten points whereas touching the pufferfish minuses 5 points. There is also a muffin count displayed on screen (figure 3) which gets updated. The seal and camera move together using WASD and QE to create a followable character. The muffins are rotating slowly by themselves and can be collided if the radius of the seal and muffin collide. This collision is the same with the pufferfish, however, these move on their own around the screen. The pufferfish movement path is randomised by randomising how long before they change direction and randomising the direction. The whole scene is in a sky sphere which is textured on the inside. 
+
 								</p>
 							</div>
-							<!-- <div class="col-6 col-12-medium imp-medium">
-								<span class="image fit"><img src="images/Pizza.PNG" alt="" /></span>
+							<div class="col-6 col-12-medium imp-medium">
+								<span class="image fit"><img src="images/muffins.PNG" alt="" /></span>
 								<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><video width="320" height="240" controls>
-								<source src="images/Pizza.mp4" type="video/mp4"></span> -->
+								<source src="images/muffins.mp4" type="video/mp4"></span>
 						</div>
 						</div>
 					</div>
