--- a/index.html
+++ b/index.html
@@ -28,195 +28,26 @@
 
 					</div>
 					<div class="col-6 col-12-medium imp-medium">
-						<span class="image"><img width="400" height="310" src="images/avatar.jpg" alt="" /></span>
+						<span class="image"><img width="380" height="380" src="images/avatar.jpg" alt="" /></span>
 					</div>
 				</div>
 			</div>
 		</section>
-
-		<!-- One -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Bird Maze</h2>
-								<h3>c++ visual studio code project</h3>
-							</header>
-							<p>The aim of the project is to create a game using the tutorials given which lean towards Pacman. Bird maze is a 
-								spin on this where a bird has to collect seeds while being chased by cats. Bananas give a speed boost and the
-								player can distract cats with a ball of wool for a few seconds. 
-							</p>
-							<p>This was made in Visual Studio and with SDL/S2D and wrritten in C++. The main focus was to code graphics and display
-								them on the screen and have them animated. This project also demonstrates using arrays to display multiple objects,
-								for example the seeds are displayed at random positions but are the same object loaded over and over and stored in an array.
-
-								This project also demonstrates collisions and sound effects at a basic level. 
-								All the graphics were drawn myself. 
-							</p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pacman.png" alt="" /></span>
-							<span class="image fit"><video width="320" height="240" controls>
-								<source src="images/BirdMaze.mp4" type="video/mp4">
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="main style2">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Cheese Chase</h2>
-								<h3>C# Unity prototype platformer</h3>
-							</header>
-							<p>This project was inspired by Cheese Land in Mario Kart and the sterotype of mice loving cheese. The idea was to have platforms made
-								out of different types of cheese which caused different effects. There are swiss cheese platforms which collapse under the player, bouncy
-								cheese jump pads and moudly cheese tiles which damage the player.
-							</p>
-
-							<p>What is notable about this, is this is the first time I felt like I had a proper understanding of Unity. 
-								I learnt how to import my own sprite sheets and how to split them into drawable tiles on different layers. 
-								I also learnt how to have animations run due to states. The thing I will use in a lot of other projects is the UI, 
-								I made which is interactive as the heart sprites change depending on the player health and the text which changes to display score.
-								This I can use for a health bar in any other game I make and would work for enemies as well.
-								I also learnt about how to use IEnemurators to have real time waited before executing a command. 
-								This is how the platform falls down, as well as removing the rigid body. </p>
-
-							
- 
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/CheeseChase.PNG" alt="" /></span>
-							<div class="col-6 col-12-medium imp-medium">
-						<span class="image fit"><video width="320" height="240" controls>
-							<source src="images/CheeseChase.mp4" type="video/mp4"></span>
-					</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Three -->
-		<section id="one" class="main style1">
-			<div class="container">
-				<div class="row gtr-150">
-					<div class="col-6 col-12-medium">
-						<header class="major">
-							<h2>Shmoo Shooter</h2>
-							<h3>Unity C# Side-Scrolling shooter prototype</h3>
-						</header>
-						<p>This is another prototype made from a framework in unity, however this framework was much more basic. It had the player being able to fire bullets on
-							click and enemies which destroy the player when touched. I am made a vertical side-scrolling shooter inspired by Strato Patrol EOS from Kirby's
-							Mass Attack. This is reflected in the style of graphics and the fact the player is able to collect up to ten other of the main "shmoo" characters
-							who all shoot together for increased damage. 
-						</p>
-						<p>I actually worked on this one before the Cheese Chase platformer but had several issues with it and missing features which I only learnt how to fix after
-							working on that project. For example the UI which has lives for the player and the boss I learnt to do during the platformer. I used this concept of UI
-							that changes based on variables and created one which shows how many Shmoos the player has in fighting with them. I used used my knowledge of panels and 
-							canvases to create a game over screen with my first button. 
-
-							It was also vital to understand how to have scripts communicate with variables on other scripts or without this projects in unity are very limited.
-						</p>
-					</div>
-					<div class="col-6 col-12-medium imp-medium">
-						<span class="image fit"><img src="images/sidescroller.png" alt="" /></span>
-					</div>
-					<div class="image fit"><video width="320" height="240" controls>
-						<source src="images/sidescroller1.mp4" type="video/mp4"></div>
-					<div class="image fit"><video width="320" height="240" controls>
-							<source src="images/sidescroller2.mp4" type="video/mp4"></div>	
+		<section>
+			<div class="box alt">
+				<div class="row gtr-uniform gtr-50">
+					<div class="col-4"><span class="image fit"><iframe width="420" height="315"
+						src="https://youtu.be/pyB2xiS1_i0" autoplay>
+						</iframe></a></div>
+					<div class="col-4"><a href="SummerSolstice.html" class="image fit"><span class="label">Summer Solstice RPG Maker MV<img src="images/summersolstice.PNG" alt=""></a></div>
+					<div class="col-4"><a href="BirdMaze.html" class="image fit"><span class="label">Bird Maze SDL C++<img src="images/pacman.png" alt=""></a></div>
+					<div class="col-4"><a href="ShmooShooter.html" class="image fit"><span class="label">Shmoo Shooter Side Scroller Unity C#<img src="images/sidescroller.png" alt=""></a></div>
+					<div class="col-4"><a href="CheeseChase.html" class="image fit"><span class="label">Cheese Chase Platformer Unity C#<img src="images/CheeseChase.PNG" alt=""></a></div>
+					<div class="col-4"><a href="PizzaArmagedon.html" class="image fit"><span class="label">Pizza Armagedon Unity C#<img src="images/Pizza.PNG" alt=""></a></div>
+					<div class="col-4"><a href="SuperSealBros.html" class="image fit"><span class="label">Super Seal Bros SDL C++<img src="images/Sealbros.PNG" alt=""></a></div>
+					<div class="col-4"><a href="Marshall.html" class="image fit"><span class="label">Marshall Eats Muffins Simulator OpenGL C++<img src="images/muffins.PNG" alt=""></a></div>
 				</div>
 			</div>
-		</section>
-
-		<!-- Four -->
-		<section id="two" class="main style2">
-			<div class="container">
-				<div class="row gtr-150">
-					<div class="col-6 col-12-medium">
-						<header class="major">
-							<h2>Pizzeria Armagedon</h2>
-							<h3>C# Unity prototype top down shooter</h3>
-						</header>
-						<p>Premise: You play as a chef in a pizzeria that is being attacked by zombie pizza dough. You must shoot the pizza dough with the correct pizza toppings before cooking it into a pizza to earn points and survive as long as possible.
-
-						</p>
-
-						<p>I created a pizza themed tile set and have sliced it with a 72 by 72 grid. I have turned it into a drawable tile palette and created a restaurant.
-							 <br>
-							It was a challenge to make the projectiles fire in the direction the player was facing. First I had to work out how the Vector 2 for player direction works. I created a debug to print out the coordinates of the player direction and converted it into a simpler int which is number 1-4 depending on direction. I then have the bullet communicate with the character controller and set another vector 2 to Vector2.right or Vector2.left etc to get the bullet to be in the same direction as the player. I then use transform.translate and this Vector2 with the stored direction to fire it in the same direction as the player. To fire the bullet I have both the new and the old input systems in the project and use the "jump" key to use space as fire. On pressing space the bullet is instantiated from a prefab with the direction set up on start.
-							 <br>
-							The gun is a child of the character and uses a script to change the sprite to face the correct direction using the int of numbers 1-4. There are also 4 firepoints which are at the end of the gun and depending on the direction a different fire point is used to make the bullet come from the end of the gun.
-							 <br>
-							I have implemented UI to swap between the different projectiles - This uses 3 buttons which when clicked, change a int to a number between 1 and 3 which in the shooting script changes which projectile is fired.
-							 <br>
-							The enemies can collide with bullets which causes a child object to display a graphic for the sauce and cheese. Once hit by the flame, the movement script is deleted and the child objects display no graphics and the enemy turns into a pizza - the player can interact with this object to score points
-							 <br>
-							The enemies have a spawning system which if there are no enemies on screen, at least one enemy must be spawned. Then there is a timer and enemies spawn every so often but only a certain amount can spawn at a time - the more points you score, the more can spawn at a time. </p>
-
-						
-
-					</div>
-					<div class="col-6 col-12-medium imp-medium">
-						<span class="image fit"><img src="images/Pizza.PNG" alt="" /></span>
-						<div class="col-6 col-12-medium imp-medium">
-					<span class="image fit"><video width="320" height="240" controls>
-						<source src="images/Pizza.mp4" type="video/mp4"></span>
-				</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- Five -->
-		<section id="one" class="main style1">
-			<div class="container">
-				<div class="row gtr-150">
-					<div class="col-6 col-12-medium">
-						<header class="major">
-							<h2>Super Seal Bros</h2>
-							<h3>Game Engine created from S2D/SDL in C++
-							</h3>
-						</header>
-						<p>Upcoming
-						</p>
-					</div>
-					<!-- <div class="col-6 col-12-medium imp-medium">
-						<span class="image fit"><img src="images/sidescroller.png" alt="" /></span>
-					</div>
-					<div class="image fit"><video width="320" height="240" controls>
-						<source src="images/sidescroller1.mp4" type="video/mp4"></div>	 -->
-				</div>
-			</div>
-		</section>
-				<!-- Six -->
-				<section id="two" class="main style2">
-					<div class="container">
-						<div class="row gtr-150">
-							<div class="col-6 col-12-medium">
-								<header class="major">
-									<h2>Marshall Eats Muffin Simulator</h2>
-									<h3>OpenGL 3D Game Engine in C++</h3>
-								</header>
-								<p>This was created using the OpenGL libraries in visual studio and written in C++
-									<br>
-									WASD to move character and camera forward, backwards, left and right (figure 2)
-									QE to move the character and camera up and down.
-									The game is called Marshall eats muffins simulator as the playable character is a seal named Marshall who must eat muffins to score points. Colliding with muffins adds ten points whereas touching the pufferfish minuses 5 points. There is also a muffin count displayed on screen (figure 3) which gets updated. The seal and camera move together using WASD and QE to create a followable character. The muffins are rotating slowly by themselves and can be collided if the radius of the seal and muffin collide. This collision is the same with the pufferfish, however, these move on their own around the screen. The pufferfish movement path is randomised by randomising how long before they change direction and randomising the direction. The whole scene is in a sky sphere which is textured on the inside. 
-
-								</p>
-							</div>
-							<div class="col-6 col-12-medium imp-medium">
-								<span class="image fit"><img src="images/muffins.PNG" alt="" /></span>
-								<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><video width="320" height="240" controls>
-								<source src="images/muffins.mp4" type="video/mp4"></span>
-						</div>
-						</div>
-					</div>
-				</section>
 		<!--
 			<section id="five" class="main style1">
 				<div class="container">
@@ -540,6 +371,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="https://github.com/JaclynMoorhouse" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/in/jaclyn-moorhouse-873750255/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://instagram.com/autumnequinoxgame" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://solsticegames.itch.io/" class="image"><img width ="25" height = "25" src="images/itchio.png" alt=""></a></li>
 				</ul>
 			<header class="major">
 				<h2>Thank you for checking out my projects</h2>
