--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<section>
 			<div class="box alt">
 				<div class="row gtr-uniform gtr-50">
-					<div class="col-4"><a href="https://youtu.be/pyB2xiS1_i0" class="image fit"><span class="label">Show Reel<img src="https://youtu.be/pyB2xiS1_i0" alt=""></a></a></div>
+					<div class="col-4"><a href="https://youtu.be/pyB2xiS1_i0" class="image fit"><span class="label">Show Reel<img src="images/Showreel.PNG" alt=""></a></a></div>
 					<div class="col-4"><a href="SummerSolstice.html" class="image fit"><span class="label">Summer Solstice RPG Maker MV<img src="images/summersolstice.PNG" alt=""></a></div>
 					<div class="col-4"><a href="BirdMaze.html" class="image fit"><span class="label">Bird Maze SDL C++<img src="images/pacman.png" alt=""></a></div>
 					<div class="col-4"><a href="ShmooShooter.html" class="image fit"><span class="label">Shmoo Shooter Side Scroller Unity C#<img src="images/sidescroller.png" alt=""></a></div>
