--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 							<h1>Hi I'm<strong> Jaclyn</strong></h1>
 						</header>
 						<p>
-							I’m a final-year Computer Games Development student passionate about education, digital creativity, and community engagement. I specialise in C++, C#, and game engines like Unity and Unreal Engine. I also bring leadership experience through children’s education initiatives and running a creative small business. My goal is to inspire learners through practical, imaginative, and accessible technology education.
+							I’m a final-year Computer Games Development student passionate about education, digital creativity, and community engagement. I specialise in C++, C#, and game engines like Unity and Unreal Engine. 
+							I also bring leadership experience through children’s education initiatives and running a creative small business. My goal is to inspire women to be part of the programming space in games. 
 						</p>
 
 					</div>
